--- a/strapi/api/card-alunos/models/card-alunos.settings.json
+++ b/strapi/api/card-alunos/models/card-alunos.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "card_alunos",
   "info": {
-    "name": "CardAlunos"
+    "name": "CardAlunos",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -20,17 +21,6 @@
     },
     "lattesAluno": {
       "type": "string"
-    },
-    "fotoAluno": {
-      "collection": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false
     },
     "linkedinAluno": {
       "type": "string"
