--- a/strapi/api/aluno/models/aluno.settings.json
+++ b/strapi/api/aluno/models/aluno.settings.json
@@ -27,6 +27,11 @@
     "senha": {
       "type": "password",
       "required": true
+    },
+    "cursos": {
+      "via": "alunos",
+      "collection": "curso",
+      "dominant": true
     }
   }
 }
