--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.5.3",
     "gatsby": "^2.25.3",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-strapi": "^0.0.12",
     "react": "^16.12.0",
     "react-bootstrap": "^1.4.0",
